--- a/_posts/blog/2016-08-17-nautilus.md
+++ b/_posts/blog/2016-08-17-nautilus.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Jewellery Fishing until Extinction?
-subtitle: The genetic relationships of _Nautilus_
+subtitle: The genetic relationships of Nautilus
 categories: blog
 author: Mahalia Martin
 ---
