--- a/_posts/blog/2016-08-17-nautilus.md
+++ b/_posts/blog/2016-08-17-nautilus.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Jewellery Fishing until Extinction?
+title: Jewellery Fishing to Extinction?
 subtitle: The genetic relationships of Nautilus
 categories: blog
 author: Mahalia Martin
