--- a/_posts/news/2016-10-04-phd_euc.md
+++ b/_posts/news/2016-10-04-phd_euc.md
@@ -13,6 +13,6 @@ The project will be embedded in the [Eucalypt Genetics Group](http://www.eucalyp
 
 To apply, please email a brief summary of research interests along with a CV and the contact details for at least two referees. Applications will be assessed on an ongoing basis. Students with an excellent academic background and enthusiasm will be invited to apply to UTAS for a competitive APA Scholarship (open until [16 October 2016](http://www.utas.edu.au/research/degrees/scholarships); applications after this date can be considered in future rounds if the project is unfilled). International students are eligible for these scholarships, but may also apply through another program (e.g. Endeavour, or a scheme in the applicant's home country). To rank highly in these scholarship rounds, students will need to have completed a Masters by Research (or international equivalent) or first class Honours (domestic students), and have at least one publication. Running costs will be funded by a recently awarded ARC Discovery Grant.
 
-Contact [Dr Rebecca Jones](mailto:rebecca.jones@utas.edu.au), [Assoc. Prof Barbara Holland](mailto:barbara.holland@utas.edu.au) or [Assoc. Prof Mike Charleston](mailto:mike.charleston@utas.edu.au) for more information (Rebecca.Jones[at]utas.edu.au, Barbara.Holland[at]utas.edu.au, Michael.Charleston[at]utas.edu.au).
+Contact [Dr Rebecca Jones](mailto:rebecca.jones@utas.edu.au), [Assoc. Prof Barbara Holland](mailto:barbara.holland@utas.edu.au) or [Assoc. Prof Mike Charleston](mailto:mike.charleston@utas.edu.au) for more information.
 
 General information about research degrees at UTAS can be found [here](http://www.utas.edu.au/research/degrees)
