--- a/_posts/news/2016-10-04-phd_euc.md
+++ b/_posts/news/2016-10-04-phd_euc.md
@@ -9,7 +9,7 @@ An exciting opportunity exists for a highly motivated student to join biologists
 
 Our [recent research](http://dx.doi.org/10.1016/j.ympev.2016.08.009) into the phylogenetic relationships among eucalypts, using genome-wide markers and multiple geographically widespread samples, has revealed numerous puzzling discrepancies, most likely due to recent radiation, incomplete lineage sorting of given genomic markers, and/or reticulate (non-tree-like) evolution.  However, these evolutionary processes are difficult to distinguish, and the relative contribution of each is likely to vary across the continent and among groups of species. This project will exploit this new molecular phylogeny of eucalypts to tease apart these evolutionary processes and reconstruct the relative timing of the evolution of key traits.
 
-The project will be embedded in the [Eucalypt Genetics Group](http://www.eucalyptgenetics.com/) at UTAS (led by Profs [Brad Potts](http://www.utas.edu.au/profiles/staff/plant-science/Brad-Potts) and [René Vaillancourt](http://www.utas.edu.au/profiles/staff/plant-science/rene-vaillancourt)) which has a world-class interdisciplinary research programme that investigates the evolutionary and ecological forces that shape diversity in Eucalyptus. It involves cross-disciplinary collaboration with mathematicians in the [Theoretical Phylogenetics Group](http://www.maths.utas.edu.au/People/Holland/theoreticalPhylogenetics) at UTAS (including A/Profs [Barbara Holland](http://www.utas.edu.au/profiles/staff/maths-physics/Barbara-Holland) and [Mike Charleston](http://www.utas.edu.au/profiles/staff/maths-physics/Michael-Charleston)) which has a special interest in applying mathematics and statistics to problems in evolutionary biology and ecology. The project is based in Hobart which offers an excellent lifestyle with stunning wilderness areas nearby, a vibrant arts and boutique food culture and affordable living expenses compared with other Australian capital cities.
+The project will be embedded in the [Eucalypt Genetics Group](http://www.eucalyptgenetics.com/) at UTAS (led by Profs [Brad Potts](http://www.utas.edu.au/profiles/staff/plant-science/Brad-Potts) and [René Vaillancourt](http://www.utas.edu.au/profiles/staff/plant-science/rene-vaillancourt)) which has a world-class interdisciplinary research programme that investigates the evolutionary and ecological forces that shape diversity in _Eucalyptus_. It involves cross-disciplinary collaboration with mathematicians in the [Theoretical Phylogenetics Group](http://www.maths.utas.edu.au/People/Holland/theoreticalPhylogenetics) at UTAS (including A/Profs [Barbara Holland](http://www.utas.edu.au/profiles/staff/maths-physics/Barbara-Holland) and [Mike Charleston](http://www.utas.edu.au/profiles/staff/maths-physics/Michael-Charleston)) which has a special interest in applying mathematics and statistics to problems in evolutionary biology and ecology. The project is based in Hobart which offers an excellent lifestyle with stunning wilderness areas nearby, a vibrant arts and boutique food culture and affordable living expenses compared with other Australian capital cities.
 
 To apply, please email a brief summary of research interests along with a CV and the contact details for at least two referees. Applications will be assessed on an ongoing basis. Students with an excellent academic background and enthusiasm will be invited to apply to UTAS for a competitive APA Scholarship (open until [16 October 2016](http://www.utas.edu.au/research/degrees/scholarships); applications after this date can be considered in future rounds if the project is unfilled). International students are eligible for these scholarships, but may also apply through another program (e.g. Endeavour, or a scheme in the applicant's home country). To rank highly in these scholarship rounds, students will need to have completed a Masters by Research (or international equivalent) or first class Honours (domestic students), and have at least one publication. Running costs will be funded by a recently awarded ARC Discovery Grant.
 
