--- a/_posts/news/2016-10-18-beast.md
+++ b/_posts/news/2016-10-18-beast.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Taming the BEAST
-subtitle: Week-long phylogenetics summer school (U. Auckland)
+subtitle: Phylogenetics summer school & annual NZ Phylogenomics meeting (U. Auckland)
 categories: news
 ---
 
@@ -16,5 +16,7 @@ The summer school is primarily designed for postgraduate students and early-care
 Numbers at the summer school are limited to 30. Please register your interest by **25 October 2016** by sending an expression of interest to [compevol@auckland.ac.nz](mailto:compevol@auckland.ac.nz) with a bio and your area of research interest. We will notify participants in early November for payment.
 
 There are three scholarships of NZD $750 towards the cost of the workshop available for postgraduate students. If you would like to be considered for one of these scholarships, please send your CV and a letter to the organiser stating your areas of research and why you should be selected, by **25 October 2016**. Decision by the organisers is final, and successful applicants will be informed by the beginning of November.
+
+The following week (12-17 February 2017) The University of Auckland will also be hosting **the 21st Annual NZ Phylogenomics meeting**!
 
 Further information can be found at the [official website](https://www.compevol.auckland.ac.nz/en/events/events-2017/02/beast-south-pacific-1.html).
