--- a/_posts/news/2017-10-06-chapple.md
+++ b/_posts/news/2017-10-06-chapple.md
@@ -12,6 +12,6 @@ The successful student will be able to develop a project in one the lab’s two 
 - Behavioural and Evolutionary Ecology of the Delicate skink (Lampropholis delicata).
 - Lizard Macroecology.
 
-See [the full advertisement]({{ site.url }}/docs/chapple_PhDs.pdf) for further details. Interested students should email their CV, academic record, and research interests to Assoc Prof David Chapple (david.chapple[at]monash.edu) by **Friday 13th October 2017**.
+See [the full advertisement]({{ site.url }}/docs/chapple_PhDs.pdf) for further details. Interested students should email their CV, academic record, and research interests to Assoc. Prof. David Chapple (david.chapple[at]monash.edu) by **Friday 13th October 2017**.
 
 
