--- a/_posts/news/2018-02-25-phd.md
+++ b/_posts/news/2018-02-25-phd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: PhD opportunity!
-subtitle: Lord Howe Stick Insects (ANU, Canberra)
+subtitle: Lord Howe Island Stick Insects (ANU, Canberra)
 categories: news
 ---
 
