--- a/_posts/news/2018-02-25-phd.md
+++ b/_posts/news/2018-02-25-phd.md
@@ -7,7 +7,7 @@ categories: news
 
 The Lord Howe Island Stick Insect, thought to be extinct but recently rediscovered, has become emblematic of the dangers faced by island species in the face of anthropogenic change. A planned reintroduction effort aims to rescue this species, one of the rarest insects in the world, from the brink of extinction. This project aims to assess the genetic diversity of the re-discovered population, currently maintained in a captive breeding program, and aid the development of plans for release. The project will combine cutting-edge molecular techniques and innovative approaches to genotyping of unusual material (historical and non-destructively sampled in the field) with analysis of next-generation sequencing data. In addition to the primary objectives, the unique biology of this insect provides opportunities to investigate more general biological questions, ranging from the effect of polyploidy on the animal body, to how massive body size evolves. Crucially, research outcomes of this project will directly contribute to ongoing conservation efforts.
 
-[**See the full advertisement**](http://homologo.us/phd-student-position-to-work-on-lord-howe-stick-insect/) for further details. **Expressions of interest** should be submitted directly to Alexander Mikheyev [alexander.mikheyev@anu.edu.au](alexander.mikheyev@anu.edu.au) by March 1, 2018 (though this may be extended). Please include a brief statement on why you are interested in this project, a CV and contact details for references. Following assessment of applications one applicant will then be invited to formally apply to the ANU. The successful applicant will be able to start as soon as possible. You can also find out more information about the graduate program here, by clicking on the “Higher Degree by Research” tab.
+[**See the full advertisement**](http://homologo.us/phd-student-position-to-work-on-lord-howe-stick-insect/) for further details. **Expressions of interest** should be submitted directly to Alexander Mikheyev [(alexander.mikheyev@anu.edu.au)](alexander.mikheyev@anu.edu.au) by March 1, 2018 (though this may be extended). Please include a brief statement on why you are interested in this project, a CV and contact details for references. Following assessment of applications one applicant will then be invited to formally apply to the ANU. The successful applicant will be able to start as soon as possible. You can also find out more information about the graduate program here, by clicking on the “Higher Degree by Research” tab.
 
 
 
