--- a/_posts/news/2018-06-07-phd_dev.md
+++ b/_posts/news/2018-06-07-phd_dev.md
@@ -11,9 +11,9 @@ Environmental temperatures have a profound impact on developing animals. The [Sc
 
 Potential projects include: 
 
-1) Quantifying temperature-based developmental plasticity across animal taxa.
-2) Quantifying and comparing other sources of developmental plasticity (e.g. maternal diet and oviposition behavior). 
-3) Analyzing reaction norms of plasticity. 
+1. Quantifying temperature-based developmental plasticity across animal taxa.
+2. Quantifying and comparing other sources of developmental plasticity (e.g. maternal diet and oviposition behavior). 
+3. Analyzing reaction norms of plasticity. 
 
 Addressing these issues will determine the relative importance of climate and temperature for organismal traits, and how they shape animal ecology and evolution. The studies to be undertaken are flexible and will depend on the student's interests.
  
