--- a/_posts/news/2018-07-25-noble_phd.md
+++ b/_posts/news/2018-07-25-noble_phd.md
@@ -13,4 +13,4 @@ categories: news
 
 **Location:** The candidate will be based in the Division of Ecology and Evolution at the Research School of Biology at the Australian National University in Canberra, Australia. The ANU is one of the best universities in the world and is one of the highest ranked universities in Australia. The candidate will make use of ANU's excellent semi-natural outdoor mesocosms and temperature controlled facilities for conducting experiments. Fieldwork will take place along Australia's east coast. The candidate will also work closely with collaborators, both abroad, and within the [Research School of Biology](http://biology.anu.edu.au/research/divisions/ecology-and-evolution) for various aspects of the project. 
 
-**Expression of interest:** Expressions of interest should be submitted directly to Daniel Noble (daniel.wa.noble[at]gmail.com) by August 10, 2018. Please include a brief statement on why you are interested in this project, a CV and contact details for references. Following assessment of applications, one applicant will then be invited to formally apply to the ANU. The successful applicant should be able to start by February 2019. You can also find out more information about the graduate program by clicking on the “Higher Degree by Research” at [this link](http://biology.anu.edu.au/education/degree-programs)
+**Expression of interest:** Expressions of interest should be submitted directly to Daniel Noble (daniel.wa.noble[at]gmail.com) by **August 10, 2018**. Please include a brief statement on why you are interested in this project, a CV and contact details for references. Following assessment of applications, one applicant will then be invited to formally apply to the ANU. The successful applicant should be able to start by **February 2019**. You can also find out more information about the graduate program by clicking on the “Higher Degree by Research” at [this link](http://biology.anu.edu.au/education/degree-programs)
