--- a/_posts/news/2023-06-09-AES_2023_announce.md
+++ b/_posts/news/2023-06-09-AES_2023_announce.md
@@ -19,4 +19,6 @@ Early bird registration closes: 31st of October (*if you would like to present o
 
 Final registration closes: 6th of December  
 
-Stay tuned for announcements on ECR prizes and awards.
+ECR Best Paper Award: 
+
+https://ausevo.com/excellence_awards/
