--- a/_posts/news/2023-12-16-AusEvo2023.md
+++ b/_posts/news/2023-12-16-AusEvo2023.md
@@ -32,3 +32,19 @@ Aubrey Keirnan (Flinders Uni)
 
 Lachlan King   
 Lachlan get to keep the conference chicken as a prize!
+
+
+# Congratulations to our 2023 AES Best Paper Award recipients!
+
+### Postgraduate category
+
+**Dr. Claudia Crowther**
+
+**Crowther, C.**, Bonser, S. P., & Schwanz, L. E. (2023). Plasticity and the adaptive evolution of switchlike reaction norms under environmental change. Evolution Letters, qrad035. [doi.org/10.1093/evlett/qrad035](https://doi.org/10.1093/evlett/qrad035)
+
+
+### Postdoc category
+
+**Dr. Samuel Lymbery**
+
+**Lymbery, S. J.**, Webber, B. L., & Didham, R. K. (2023). Complex battlefields favor strong soldiers over large armies in social animal warfare. Proceedings of the National Academy of Sciences, 120(37), e2217973120. [doi.org/10.1073/pnas.2217973120](https://doi.org/10.1073/pnas.2217973120)
